@@ -13,14 +13,12 @@ import com.insu.backend.project.response.ProjectList;
 import com.insu.backend.project.response.ProjectOne;
 import com.insu.backend.skill.entity.Skill;
 import com.insu.backend.skill.repository.SkillRepository;
-import com.insu.backend.skill.response.SkillNameResponse;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -54,6 +52,8 @@ public class ProjectService {
         Project project = projectRepository.findById(projectId)
                 .orElseThrow(NotFoundPost::new);
 
+        List<Skill> skills = project.getSkills();
+
         ProjectOne projectOne = ProjectOne.builder()
                 .projectTitle(project.getProjectTitle())
                 .projectContent(project.getProjectContent())
@@ -61,9 +61,9 @@ public class ProjectService {
                 .memberId(project.getMember().getMemberId())
                 .createAt(project.getCreateAt())
                 .updateAt(project.getUpdateAt())
-                .skills(project.getSkills().stream()
-                        .map(SkillNameResponse::new)
-                        .collect(Collectors.toList()))
+                .skills(skills.stream()
+                        .map(Skill::getSkillName)
+                        .toList())
                 .build();
 
         return projectOne;
@@ -81,9 +81,9 @@ public class ProjectService {
         Member member = memberRepository.findByMemberId(request.getMemberId())
                 .orElseThrow(NotFoundMemberId::new);
 
-        List<Skill> skillS = skillRepository.findBySkillNameIn(request.getSkills());
+        List<Skill> skills = skillRepository.findBySkillNameIn(request.getSkills());
 
-        project.editProject(request.getProjectTitle(), request.getProjectContent(), request.getCategory(), skillS);
+        project.editProject(request.getProjectTitle(), request.getProjectContent(), request.getCategory(), skills);
 
         return ProjectOne.builder()
                 .projectTitle(project.getProjectTitle())
@@ -92,9 +92,9 @@ public class ProjectService {
                 .memberId(project.getMember().getMemberId())
                 .createAt(project.getCreateAt())
                 .updateAt(project.getUpdateAt())
-                .skills(project.getSkills().stream()
-                        .map(SkillNameResponse::new)
-                        .collect(Collectors.toList()))
+                .skills(skills.stream()
+                        .map(Skill::getSkillName)
+                        .toList())
                 .build();
     }
 }
